2023-11-26  Markus Gans  <guru.mail@muenster.de>
	* Fix incorrectly calculated coordinates in FScrollView 
	  on position changes
	* Minor speed improvements in the terminal display

2023-11-11  Markus Gans  <guru.mail@muenster.de>
	* Optimized mouse string parser

2023-11-03  Markus Gans  <guru.mail@muenster.de>
	* Reorganize the data structure of widget color theme

2023-10-30  Markus Gans  <guru.mail@muenster.de>
	* Terminal detection can be turned off again
	* The missing null pointer check has been added to the constructor 
	  of FWindow

2023-10-26  Markus Gans  <guru.mail@muenster.de>
	* Reorganize the data structure of FOptiMove

2023-10-25  Markus Gans  <guru.mail@muenster.de>
	* Reorganize the data structure of FVTerm::FTermArea

2023-10-23  Markus Gans  <guru.mail@muenster.de>
	* Reorganize the data structure of FOptiAttr

2023-10-14  Markus Gans  <guru.mail@muenster.de>
	* Switch to a readers-writer lock for the timer list

2023-10-07  Markus Gans  <guru.mail@muenster.de>
	* Bugfix: Bottom transparent shadow changes were registered in wrong row

2023-10-03  Markus Gans  <guru.mail@muenster.de>
	* Eliminate undefined behavior on exit

2023-09-17  Markus Gans  <guru.mail@muenster.de>
	* Better direct access to FCharAttribute type

2023-06-04  Markus Gans  <guru.mail@muenster.de>
	* Added support for a tiltable scroll wheel. This allows you to scroll 
	  the context of widgets left and right in an xterm

2023-05-31  Markus Gans  <guru.mail@muenster.de>
	* Fix setFormatedNumber() in FString for separator > 127 
	  (e.g. non-breaking space)

2023-05-18  Markus Gans  <guru.mail@muenster.de>
	* Version 0.9.0

2023-04-15  Markus Gans  <guru.mail@muenster.de>
	* Terminal focus-in and focus-out events can be disabled with 
	  the --no-terminal-focus-events parameter

2023-04-08  Markus Gans  <guru.mail@muenster.de>
	* Clears the FScrollView viewport area after viewport creation or 
	  resizing

2023-04-07  Markus Gans  <guru.mail@muenster.de>