@@ -1,3 +1,6 @@
+2023-12-10  Markus Gans  <guru.mail@muenster.de>
+	* Permit message box without buttons
+
 2023-11-26  Markus Gans  <guru.mail@muenster.de>
 	* Fix incorrectly calculated coordinates in FScrollView 
 	  on position changes
